--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -73,5 +73,5 @@ jobs:
 
       - name: Replace placeholder set names
         run: |
-          sed -i "s/taskdb-app/secret-app/g" deployment.yml
-          sed -i "s/taskdb-svc/secret-svc/g" deployment.yml
+          sed -i "s/secret-/taskdb-/g" deployment.yml
+          kubectl apply -f deployment.yml
