--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -69,9 +69,11 @@ jobs:
               -e "s/${{ env.DB-PASSWORD }}/${db-passowrd}/g" \
               -e "s/${{ env.DB-HOST }}/${db-host}/g" \
               -e "s/${{ env.DB-DIALECT }}/${db-dialect}/g" \
-              deployment.yml | kubectl apply -f -
+              deployment.yml
 
       - name: Replace placeholder set names
         run: |
-          sed -i "s/secret-/taskdb-/g" deployment.yml
+          sed -i "s/secret/taskdb/g" deployment.yml
           kubectl apply -f deployment.yml
+
+      # | kubectl apply -f -
