--- a/deployment.yml
+++ b/deployment.yml
@@ -42,7 +42,7 @@ spec:
             - name: dbhost
               value: "{{db-host}}"
             - name: dbdialect
-              value: "{{db-dialect}}"
+              value: "postgres"
 ---
 apiVersion: v1
 kind: Service
