--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -68,11 +68,5 @@ jobs:
               -e "s/${{ env.DB-USERNAME }}/${db-username}/g" \
               -e "s/${{ env.DB-PASSWORD }}/${db-passowrd}/g" \
               -e "s/${{ env.DB-HOST }}/${db-host}/g" \
-              deployment.yml
-
-      - name: Replace placeholder set names
-        run: |
-          sed -i "s/secret/taskdb/g" deployment.yml
-          kubectl apply -f deployment.yml
-
-      # | kubectl apply -f -
+              -i "s/secret/taskdb/g" \ 
+              deployment.yml | kubectl apply -f -
