--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Install kubectl cli
         run: |
           sudo az aks install-cli
-          secrets=("GOOGLE-CLIENT-ID" "GOOGLE-CLIENT-SECRET" "GITHUB-CLIENT-ID" "GITHUB-CLIENT-SECRET" "SESSION-SECRET" "DB-NAME" "DB-USERNAME" "DB-PASSWORD" "DB-HOST")
+          secrets=("GOOGLE-CLIENT-ID" "GOOGLE-CLIENT-SECRET" "GITHUB-CLIENT-ID" "GITHUB-CLIENT-SECRET" "SESSION-SECRET" "DB-NAME" "DB-USERNAME" "DB-PASSWORD" "DB-HOST" "DB-DIALECT")
 
           for secret in "${secrets[@]}"
           do
@@ -68,5 +68,10 @@ jobs:
               -e "s/${{ env.DB-USERNAME }}/${db-username}/g" \
               -e "s/${{ env.DB-PASSWORD }}/${db-passowrd}/g" \
               -e "s/${{ env.DB-HOST }}/${db-host}/g" \
-              -i "s/secret/taskdb/g" \ 
+              -e "s/${{ env.DB-DIALECT }}/${db-dialect}/g" \
               deployment.yml | kubectl apply -f -
+
+      - name: Replace placeholder set names
+        run: |
+          sed -i "s/secret/taskdb/g" deployment.yml
+          kubectl apply -f deployment.yml
