--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -66,7 +66,11 @@ jobs:
               -e "s/${{ env.SESSION-SECRET }}/${session-secret}/g" \
               -e "s/${{ env.DB-NAME }}/${db-name}/g" \
               -e "s/${{ env.DB-USERNAME }}/${db-username}/g" \
-              -e "s/${{ env.DB-PASSWORD }}/${db-passowrd}/g" \
+              -e "s/${{ env.DB-PASSWORD }}/${db-password}/g" \
               -e "s/${{ env.DB-HOST }}/${db-host}/g" \
               -e "s/${{ env.DB-DIALECT }}/${db-dialect}/g" \
-              -i "s/secret/taskdb/g" deployment.yml && kubectl apply -f deployment.yml
+              deployment.yml > modified_deployment.yml
+
+          sed -i "s/secret/taskdb/g" modified_deployment.yml
+
+          kubectl apply -f modified_deployment.yml
