--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -59,20 +59,36 @@ jobs:
 
       - name: Apply Secrets Deploy to Kubernetes
         run: |
-          sed -i "s/{{google-client-id}}/${{ env.GOOGLE-CLIENT-ID }}/g" \
-              -i "s/{{google-client-secret}}/${{ env.GOOGLE-CLIENT-SECRET }}/g" \
-              -i "s/{{github-client-id}}/${{ env.GITHUB-CLIENT-ID }}/g" \
-              -i "s/{{github-client-secret}}/${{ env.GITHUB-CLIENT-SECRET }}/g" \
-              -i "s/{{session-secret}}/${{ env.SESSION-SECRET }}/g" \
-              -i "s/{{db-name}}/${{ env.DB-NAME }}/g" \
-              -i "s/{{db-username}}/${{ env.DB-USERNAME }}/g" \
-              -i "s/{{db-passowrd}}/${{ env.DB-PASSWORD }}/g" \
-              -i "s/{{db-host}}/${{ env.DB-HOST }}/g" \
-              -i "s/{{db-dialect}}/${{ env.DB-DIALECT }}/g" \
-              -i "s/secret/taskdb/g" \
-              deployment.yml | kubectl apply -f -
+          sed -i'' -e "s/${{ env.GOOGLE-CLIENT-ID }}/${google-client-id}/g" \
+              -e "s/${{ env.GOOGLE-CLIENT-SECRET }}/${google-client-secret}/g" \
+              -e "s/${{ env.GITHUB-CLIENT-ID }}/${github-client-id}/g" \
+              -e "s/${{ env.GITHUB-CLIENT-SECRET }}/${github-client-secret}/g" \
+              -e "s/${{ env.SESSION-SECRET }}/${session-secret}/g" \
+              -e "s/${{ env.DB-NAME }}/${db-name}/g" \
+              -e "s/${{ env.DB-USERNAME }}/${db-username}/g" \
+              -e "s/${{ env.DB-PASSWORD }}/${db-password}/g" \
+              -e "s/${{ env.DB-HOST }}/${db-host}/g" \
+              -e "s/${{ env.DB-DIALECT }}/${db-dialect}/g" \
+              -e "s/secret/taskdb/g" deployment.yml
+
+          kubectl apply -f deployment.yml
 
       # - name: Replace placeholder set names
       #   run: |
       #     sed -i "s/secret/taskdb/g" deployment.yml
       #     kubectl apply -f deployment.yml
+
+      # - name: Apply Secrets Deploy to Kubernetes
+      #   run: |
+      #     sed -i "s/{{google-client-id}}/${{ env.GOOGLE-CLIENT-ID }}/g" \
+      #         -i "s/{{google-client-secret}}/${{ env.GOOGLE-CLIENT-SECRET }}/g" \
+      #         -i "s/{{github-client-id}}/${{ env.GITHUB-CLIENT-ID }}/g" \
+      #         -i "s/{{github-client-secret}}/${{ env.GITHUB-CLIENT-SECRET }}/g" \
+      #         -i "s/{{session-secret}}/${{ env.SESSION-SECRET }}/g" \
+      #         -i "s/{{db-name}}/${{ env.DB-NAME }}/g" \
+      #         -i "s/{{db-username}}/${{ env.DB-USERNAME }}/g" \
+      #         -i "s/{{db-passowrd}}/${{ env.DB-PASSWORD }}/g" \
+      #         -i "s/{{db-host}}/${{ env.DB-HOST }}/g" \
+      #         -i "s/{{db-dialect}}/${{ env.DB-DIALECT }}/g" \
+      #         -i "s/secret/taskdb/g" \
+      #         deployment.yml | kubectl apply -f -
