--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,14 +27,14 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
 
-      - name: Build and Push Docker Image
-        uses: mr-smithers-excellent/docker-build-push@v6
-        with:
-          image: confidencedev/taskdb
-          tags: latest
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Build and Push Docker Image
+      #   uses: mr-smithers-excellent/docker-build-push@v6
+      #   with:
+      #     image: confidencedev/taskdb
+      #     tags: latest
+      #     registry: docker.io
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Install Azure CLI
         run: |
@@ -71,8 +71,8 @@ jobs:
 
       - name: Apply Secrets Deploy to Kubernetes
         run: |
-          sed -i "s,dbhost,$env.DB-HOST," deployment.yaml
-          sed -i "s,dbdialect,$env.DB-DIALECT ," deployment.yaml
+          sed -i "s,dbhost,$env.DB-HOST," deployment.yml
+          sed -i "s,dbdialect,$env.DB-DIALECT ," deployment.yml
 
           kubectl apply -f deployment.yml
 
