--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -60,19 +60,10 @@ jobs:
               echo "$secret=$value" >> $GITHUB_ENV
           done
 
-      - name: Replace variables in deployment and service YAML
-        uses: rmeneely/update-yaml@v1
-        with:
-          infile: deployment.yml
-          varlist: appVersion=v1.2.3,version=4.5.6
-
-      - name: Apply Deployment and Service
-        run: kubectl apply -f deployment.yml
-
       - name: Apply Secrets Deploy to Kubernetes
         run: |
-          sed -i "s/db-dialect/${{ env.DB-DIALECT }}/g" deployment.yml
-          sed -i "s/db-host/${{ env.DB-HOST }}/g" deployment.yml
+          sed -i "s,dbhost,$env.DB-HOST," deployment.yml
+          sed -i "s,dbdialect,$env.DB-DIALECT ," deployment.yml
 
           kubectl apply -f deployment.yml
 
