--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,15 +62,7 @@ jobs:
 
       - name: Apply Secrets Deploy to Kubernetes
         run: |
-          sed -i "s,google-client-id,$env.GOOGLE-CLIENT-ID," deployment.yml
-          sed -i "s,google-client-secret,$env.GOOGLE-CLIENT-SECRET," deployment.yml
-          sed -i "s,github-client-id,$env.GITHUB-CLIENT-ID," deployment.yml
-          sed -i "s,github-client-secret,$env.GITHUB-CLIENT-SECRET," deployment.yml
-          sed -i "s,session-secret,$env.SESSION-SECRET," deployment.yml
-          sed -i "s,db-name,$env.DB-NAME," deployment.yml
-          sed -i "s,db-username,$env.DB-USERNAME," deployment.yml
-          sed -i "s,db-password,$env.DB-PASSWORD," deployment.yml
-          sed -i "s,db-host,$env.DB-HOST," deployment.yml
+          sed -i "s,google-client-id,$env.GOOGLE-CLIENT-ID,;s,google-client-secret,$env.GOOGLE-CLIENT-SECRET,;s,github-client-id,$env.GITHUB-CLIENT-ID,;s,github-client-secret,$env.GITHUB-CLIENT-SECRET,;s,session-secret,$env.SESSION-SECRET,;s,db-name,$env.DB-NAME,;s,db-username,$env.DB-USERNAME,;s,db-password,$env.DB-PASSWORD,;s,db-host,$env.DB-HOST,;s,db-dialect,$env.DB-HOST," deployment.yml
 
           kubectl apply -f deployment.yml
 
